--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -30,12 +30,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^2.3.2  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_map: ^8.2.2
   latlong2: ^0.9.1
+
+  # ⚡ Localization
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
+
+  # ⚡ State management runtime
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +67,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -67,7 +77,9 @@ flutter:
     - assets/imgs/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
+flutter_gen:
+  l10n:
+    enabled: true
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
 
